# c2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json
client/: controlbase.js  controlconnection.js  controllocal.js  hostproxy.js  index.js  package-lock.json  package.json  readline.js  registry.js  server.js  tsconfig.json
client/commands/local/: debug.js  echo.js  exit.js  lls.js  navigation.js
client/commands/remote/: audio.js  cd.js  dialog.js  discord.js  download.js  exec.js  files.js  ls.js  navigation.js  persist.js  pwd.js  screenshot.js  upload.js
client/src/: controlbase.ts  controlconnection.ts  controllocal.ts  controlserver.ts  host.ts  hostproxy.ts  hosts.ts  index.ts  readline.ts  registry.ts
client/src/commands/local/: debug.ts  echo.ts  exit.ts  help.ts  navigation.ts
client/src/commands/remote/: audio.ts  dialog.ts  discord.ts  exec.ts  files.ts  keylog.ts  navigation.ts  persist.ts  screenshot.ts  shellexec.ts  showoff.ts
common/: package-lock.json  package.json  tsconfig.json
common/packets/control/command/: 02_listhosts.json
common/packets/control/response/: 01_newpwn.json  02_servererror.json
common/packets/host/command/: 02_getshell.json  04_discord.json  04_discordcommand.json  05_exec.json  06_screenshot.json  10_persist.json  11_dialog.json  12_showoff.json  13_shellexec.json  14_keylog.json
common/packets/host/response/: 03_buffer.json  04_audio.json  05_files.json  06_keyevent.json
common/src/: connection.ts  datatypes.ts  index.ts  packet.ts  protocol.js  protocol.ts  util.ts
common/src/datatypes/: filedata.ts  index.ts  primitive.ts
common/src/packets/control/response/: 00_hostresponse.json
common/src/packets/host/command/: 08_downloadfile.json
common/test/: util.test.ts
host/: CMakeLists.txt  main.cpp
host/core/include/: command.h  controller.h  field.h  log.h  packetconnection.h  plugin.h  simplepacket.h
host/core/src/: controller.cpp  controllerimpl.h  packetconnection.cpp  primitive.cpp
host/include/: command.h  commandpacket.h  commands.h  connection.h  controller.h  field.h  packet.h  packetconnection.h  packets.h  simplecommand.h  simplepacket.h  util.h
host/lib/asio/: asio.cpp
host/lib/portaudio/: portaudio_static_x64.lib
host/lib/snappy/: snappy-stubs-public.h  snappy.h  snappy.lib
host/lib/zlib/: zlibstatic.lib
host/src/: basecommand.h  commands.cpp  commands.h  commandtypes.h  connection.cpp  connection.h  controller.cpp  controller.h  controllerimpl.h  field.cpp  field.h  main.cpp  packet.cpp  packet.h  packetconnection.cpp  packetconnection.h  simplecommand.h  simplepacket.h  util.cpp  util.h
host/src/commands/: audio.cpp  dialog.cpp  discord.cpp  exec.cpp  files.cpp  navigation.cpp  persist.cpp  screen.cpp  shellexec.cpp  showoff.cpp
host/src/connection/: packet.cpp  packetconnection.cpp  packetconnectionimpl.h
host/src/controller/: controller.cpp  controllerimpl.h
host/src/datatypes/: enums.cpp  primitive.cpp
host/src/fields/: enums.cpp  file.cpp  primitive.cpp
host/stdplugin/: commands.h  datatypes.h  stdplugin.cpp  stdplugin.h
host/stdplugin/commands/: audio.cpp  dialog.cpp  discord.cpp  exec.cpp  keylog.cpp  navigation.cpp  persist.cpp  screen.cpp  shellexec.cpp
host/stdplugin/datatypes/: keyevent.cpp
host/test/: test.cpp  util.cpp
lib/: connection.js  package.json  packet.js  protocol.js
lib/packets/control/command/: 01_relaycommand.json  02_listhosts.json
lib/packets/control/response/: 00_hostresponse.json  01_hostresponse.json  01_newpwn.json
lib/packets/host/command/: 00_ping.json  01_stdin.json  02_getshell.json  03_changedir.json  03_navigate.json  04_discordcommand.json  04_listfiles.json  05_downloadfile.json  05_exec.json  05_pwd.json  05_unused0.json  06_screenshot.json  06_uploadfile.json  07_audiocommand.json  07_audiocontrol.json  08_downloadfile.json  09_uploadfile.json
lib/packets/host/response/: 00_pong.json  00_retcode.json  01_out.json  01_stdout.json  02_err.json  02_stderr.json  03_buffer.json  03_filecontents.json  04_audio.json
protocol/: connection.js  packet.js  protocol.js
protocol/packets/host/command/: 00_ping.json  07_audiocommand.json  09_uploadfile.json  128_ping.json  129_stdin.json  130_getshell.json  131_navigate.json  132_discordcommand.json  133_exec.json  134_screenshot.json  135_audiocommand.json  136_downloadfile.json  137_uploadfile.json  138_persist.json  139_dialog.json
protocol/packets/host/response/: 00_retcode.json  01_out.json  04_audio.json
src/client/: index.js  package-lock.json  registry.js
src/client/commands/local/: debug.js  exit.js  help.js
src/client/commands/remote/: exec.js  files.js  navigation.js  screenshot.js
src/common/: packet.js  util.js
src/host/: CMakeLists.txt  commands.h  connection.cpp  connection.h  controller.cpp  controller.h  main.cpp  simplepacket.h
src/host/commands/: audio.cpp  dialog.cpp  navigation.cpp  screen.cpp
src/host/include/: controller.h  packetconnection.h
src/host/src/: main.cpp  simplecommand.h
src/host/src/commands/: exec.cpp  files.cpp
src/host/src/connection/: packetconnection.cpp  packetconnectionimpl.h
src/host/src/controller/: controllerimpl.h
src/srv/: package-lock.json  package.json
srv/: combinedserver.js  control.js  controllers.js  host.js  hosts.js  index.js  package-lock.json  package.json  tsconfig.json
srv/src/: combinedserver.ts  controllers.ts  hosts.ts  index.ts
stager/: CMakeLists.txt  stager.c
test/: test.cpp
