file(GLOB_RECURSE srcs "*.cpp")
add_library(payloadlib ${srcs})
target_include_directories(payloadlib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
target_link_libraries(payloadlib asio lodepng PortAudio snappy zlib)
target_compile_definitions(payloadlib PUBLIC WIN32_LEAN_AND_MEAN)

add_executable(payload "main.cpp")
target_link_libraries(payload payloadlib)
set_property(TARGET payload PROPERTY WIN32_EXECUTABLE $<IF:$<CONFIG:Debug>,OFF,ON>)
target_compile_definitions(payload PUBLIC $<$<NOT:$<CONFIG:Debug>>:WINGUI>)
